- STREL-469 Add RNAseq EVS models
- STREL-479 External candidate indels create active regions
- STREL-462 Do not penalize candidate SNVs in alignment scoring
- STREL-450 Add dinucs to indel error stats module
- STREL-465 Filter germline haplotypes with phasing error signature
- STREL-460 do not assess indel candidacy in active regions if assembly fails
- STREL-454 penalize for non-candidate indels in alignment scoring
- STREL-443 Remove old germline caller target BED file option
- STREL-178 replace codon phaser with variant phaser
- STREL-356 Allow BED file to restrict variant calling regions
- STREL-392 Fix overlap del handling across segments
- STREL-405 Fix overcounting issue in error stats module 
- STREL-401 Remove read edge events from error stats module
- STREL-342 use assembly to generate haplotypes in long active regions
- STREL-251 Enable automatic germline EVS calibration
- STREL-357 Add separate threshold for homref calls
v2.7.1
- STREL-336 Fix incorrect indel normalizations
- STREL-332 Revert to core somatic indel scoring with adjusted threshold
- STREL-331 left-shift indels inside of active regions
- STREL-248 update somatic EVS to include isaac4 data in training
- STREL-321 fix rare shared variant prefix issue in multi-sample analysis
- STREL-322 fix VCF namespace conflict on INFO/EVS
- STREL-200 Adjust mitochondrial strand-bias for consistency with autosomes
- STREL-319 Sync RNA-seq EVS feature names with DNA changes
- STREL-318 Accept VCFs with unknown ALT values as forced-call sites
- STREL-275 REF and ALTs do not share a common prefix of size over 1
- STREL-274 simplify variant filter logic in multi-sample germline gVCF(s)
- STREL-269 prevent indels larger than the max indel size from becoming candidate
- STREL-267 forced indel call does not appear in somatic output
v2.7.0
- STREL-184 enable somatic indel EVS
- STREL-228 improve runtime for references with many small contigs
- STREL-210 Retrain germline EVS
- STREL-164 document short haplotyping