@@ -1,3 +1,4 @@
+- STREL-478 Change gVCF non-variant blocks to use mean depth
 - STREL-469 Add RNAseq EVS models
 - STREL-479 External candidate indels create active regions
 - STREL-462 Do not penalize candidate SNVs in alignment scoring
